force-app/main/default/objects/Lead/fields/LastUpdatedFromId__c.field-meta.xml
<CustomField>
    <fullName>LastUpdatedFromId__c</fullName>
    <label>LastUpdatedFromId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>