force-app/main/default/objects/Lead/fields/LastUpdatedFromName__c.field-meta.xml
<CustomField>
    <fullName>LastUpdatedFromName__c</fullName>
    <label>LastUpdatedFromName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>