force-app/main/default/objects/Lead/fields/Lead_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Processing_Status__c</fullName>
    <description>SENT_SUCCESS, SENT_FAILED</description>
    <label>Lead Processing Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>