force-app/main/default/objects/Lead/fields/Lead_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Lead_Referrer__c</fullName>
    <label>Lead Referrer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>