force-app/main/default/objects/Lead/fields/SourceSystemName__c.field-meta.xml
<CustomField>
    <fullName>SourceSystemName__c</fullName>
    <label>SourceSystemName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>